tests/errors/toml_encode_null_in_list.dang
# TOML cannot represent null inside a list; report it in Dang terms rather than
# leaking the encoder's internal "cannot encode array with nil element" message.

print(TOML.encode({{xs: [1, null, 3]}}))
